# git-search

./: CHANGELOG.md  README.md  cabal.project  git-search.cabal  hie.yaml
.github/workflows/: ci.yaml
app/: Main.hs
examples/: config.toml
src/Git/: Search.hs
src/Git/Search/: Args.hs  Config.hs  Data.hs  Logging.hs  Network.hs  Prelude.hs  Runner.hs
src/Git/Search/Args/: TH.hs
src/Git/Search/Config/: Args.hs  Command.hs  Data.hs  Merged.hs  Phase.hs  Toml.hs  WithDisabled.hs
src/Git/Search/Config/Args/: TH.hs
src/Git/Search/Config/Toml/: Utils.hs
src/Git/Search/Logging/: Data.hs
test/functional/: Main.hs
test/integration/: Main.hs  config.toml
test/integration/Integration/: DeleteCache.hs  Prelude.hs  SearchCommit.hs  SearchPullRequest.hs
test/unit/: Main.hs
test/unit/Unit/: Prelude.hs
test/unit/Unit/Git/Search/: Config.hs
test/unit/Unit/Git/Search/Config/: Args.hs
