cabal-version:      3.0
name:               git-search
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.10 || ==9.12 || ==9.14
copyright:          2026 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/git-search/
bug-reports:        https://github.com/tbidne/git-search/issues
synopsis:           Template
description:        A Template
category:           Template
extra-source-files:
  .gitignore
  cabal.project
  README.md

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/git-search

common common-lang
  default-extensions:
    ApplicativeDo
    DuplicateRecordFields
    ExplicitNamespaces
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    StrictData

  default-language:   GHC2024

library
  import:          common-lang
  exposed-modules:
    Git.Search
    Git.Search.Args

  build-depends:
    , base                  >=4.14.0.0  && <4.23
    , directory             >=1.3.9     && <1.4
    , exception-utils       ^>=0.1
    , fs-utils              ^>=0.1
    , optparse-applicative  ^>=0.19.0.0
    , process               >=1.6.26    && <1.7
    , text                  >=2.1.3     && <2.2

  hs-source-dirs:  src

executable git-search
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , git-search

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N
