cabal-version:      3.0
name:               git-search
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.10 || ==9.12 || ==9.14
copyright:          2026 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/git-search/
bug-reports:        https://github.com/tbidne/git-search/issues
synopsis:           Template
description:        A Template
category:           Template
extra-source-files:
  .gitignore
  cabal.project
  README.md

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/git-search

common common-lang
  default-extensions:
    ApplicativeDo
    DuplicateRecordFields
    ExplicitNamespaces
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    StrictData
    TypeFamilies

  default-language:   GHC2024

library
  import:          common-lang
  exposed-modules:
    Git.Search
    Git.Search.Args
    Git.Search.Config

  build-depends:
    , base                  >=4.14.0.0  && <4.23
    , effectful             >=2.5.0.0   && <2.7
    , exception-utils       ^>=0.1
    , fs-effectful          ^>=0.1
    , fs-utils              ^>=0.1
    , optparse-applicative  ^>=0.19.0.0
    , optparse-effectful    ^>=0.1
    , relative-time         ^>=0.1
    , terminal-effectful    ^>=0.1
    , text                  >=2.1.3     && <2.2
    , time-effectful        ^>=0.1

  hs-source-dirs:  src

executable git-search
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , effectful
    , fs-effectful
    , git-search
    , optparse-effectful
    , terminal-effectful
    , time-effectful

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , containers          >=0.6.3.1 && <0.8
    , effectful
    , effectful-utils     ^>=0.1
    , env-guard           ^>=0.2
    , exception-utils
    , fs-effectful
    , git-search
    , optparse-effectful
    , tasty               >=1.1.0.3 && <1.6
    , tasty-hunit         >=0.9     && <0.11
    , terminal-effectful
    , text
    , time-effectful

  hs-source-dirs: test/functional
  ghc-options:    -threaded -with-rtsopts=-N
