cabal-version:      3.0
name:               git-search
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.10 || ==9.12 || ==9.14
copyright:          2026 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/git-search/
bug-reports:        https://github.com/tbidne/git-search/issues
synopsis:           Template
description:        A Template
category:           Template
extra-source-files:
  .gitignore
  cabal.project
  README.md
  test/integration/config.toml

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/git-search

common common-lang
  default-extensions:
    ApplicativeDo
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    ExplicitNamespaces
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    StrictData
    TypeFamilies

  default-language:   GHC2024

library
  import:          common-lang
  other-modules:   Paths_git_search
  autogen-modules: Paths_git_search
  exposed-modules:
    Git.Search
    Git.Search.Config
    Git.Search.Config.Args
    Git.Search.Config.Args.TH
    Git.Search.Config.Data
    Git.Search.Config.Merged
    Git.Search.Config.Phase
    Git.Search.Config.Toml
    Git.Search.Config.Toml.Utils
    Git.Search.Config.WithDisabled
    Git.Search.Data
    Git.Search.Logging
    Git.Search.Logging.Data
    Git.Search.Network
    Git.Search.Prelude
    Git.Search.Runner

  build-depends:
    , aeson                 >=2.0       && <2.3
    , base                  >=4.14.0.0  && <4.23
    , bytestring            >=0.10.12   && <0.13
    , containers            >=0.6.3.1   && <0.9
    , effectful             >=2.5.0.0   && <2.7
    , effectful-utils       ^>=0.1
    , exception-utils       ^>=0.1
    , fs-effectful          ^>=0.1
    , fs-utils              ^>=0.1
    , gitrev-typed          ^>=0.1
    , http-client           >=0.5.9     && <0.8
    , http-client-tls       >=0.3       && <0.5
    , http-types            ^>=0.12.3
    , optparse-applicative  ^>=0.19.0.0
    , optparse-effectful    ^>=0.1
    , os-string             ^>=2.0.0
    , relative-time         ^>=0.1
    , template-haskell      >=2.17.0.0  && <2.25
    , terminal-effectful    ^>=0.1
    , text                  >=2.1.3     && <2.2
    , time                  >=1.9.3     && <1.17
    , time-effectful        ^>=0.1
    , toml-reader           >=0.2.0.0   && <0.4

  hs-source-dirs:  src

executable git-search
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , git-search

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite integration
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Integration.DeleteCache
    Integration.Prelude
    Integration.SearchCommit
    Integration.SearchPullRequest

  build-depends:
    , base
    , effectful
    , fs-effectful
    , git-search
    , hedgehog        >=1.0.2   && <1.8
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hedgehog  >=1.2.0.0 && <1.5

  hs-source-dirs: test/integration

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , containers
    , effectful
    , fs-effectful
    , git-search
    , tasty
    , tasty-hunit         >=0.9 && <0.11
    , terminal-effectful
    , text

  hs-source-dirs: test/functional
  ghc-options:    -threaded -with-rtsopts=-N
